src/test/ui/typeck/issue-52082.stderr
error[E0609]: no field `x` on type `&Point`
  --> $DIR/issue-52082.rs:31:11
   |
LL |         a.x == b.x && a.y == b.y
   |           ^
   |
note: Type parameter 'Point' was declared here
  --> $DIR/issue-52082.rs:29:19
   |
LL |     fn equals_ref<Point>(a: &Point, b: &Point) -> bool
   |                   ^^^^^

error[E0609]: no field `x` on type `&Point`
  --> $DIR/issue-52082.rs:31:18
   |
LL |         a.x == b.x && a.y == b.y
   |                  ^
   |
note: Type parameter 'Point' was declared here
  --> $DIR/issue-52082.rs:29:19
   |
LL |     fn equals_ref<Point>(a: &Point, b: &Point) -> bool
   |                   ^^^^^

error[E0609]: no field `y` on type `&Point`
  --> $DIR/issue-52082.rs:31:25
   |
LL |         a.x == b.x && a.y == b.y
   |                         ^
   |
note: Type parameter 'Point' was declared here
  --> $DIR/issue-52082.rs:29:19
   |
LL |     fn equals_ref<Point>(a: &Point, b: &Point) -> bool
   |                   ^^^^^

error[E0609]: no field `y` on type `&Point`
  --> $DIR/issue-52082.rs:31:32
   |
LL |         a.x == b.x && a.y == b.y
   |                                ^
   |
note: Type parameter 'Point' was declared here
  --> $DIR/issue-52082.rs:29:19
   |
LL |     fn equals_ref<Point>(a: &Point, b: &Point) -> bool
   |                   ^^^^^

error[E0609]: no field `x` on type `Point`
  --> $DIR/issue-52082.rs:39:11
   |
LL |         a.x == b.x && a.y == b.y
   |           ^
   |
note: Type parameter 'Point' was declared here
  --> $DIR/issue-52082.rs:37:19
   |
LL |     fn equals_val<Point>(a: Point, b: Point) -> bool
   |                   ^^^^^

error[E0609]: no field `x` on type `Point`
  --> $DIR/issue-52082.rs:39:18
   |
LL |         a.x == b.x && a.y == b.y
   |                  ^
   |
note: Type parameter 'Point' was declared here
  --> $DIR/issue-52082.rs:37:19
   |
LL |     fn equals_val<Point>(a: Point, b: Point) -> bool
   |                   ^^^^^

error[E0609]: no field `y` on type `Point`
  --> $DIR/issue-52082.rs:39:25
   |
LL |         a.x == b.x && a.y == b.y
   |                         ^
   |
note: Type parameter 'Point' was declared here
  --> $DIR/issue-52082.rs:37:19
   |
LL |     fn equals_val<Point>(a: Point, b: Point) -> bool
   |                   ^^^^^

error[E0609]: no field `y` on type `Point`
  --> $DIR/issue-52082.rs:39:32
   |
LL |         a.x == b.x && a.y == b.y
   |                                ^
   |
note: Type parameter 'Point' was declared here
  --> $DIR/issue-52082.rs:37:19
   |
LL |     fn equals_val<Point>(a: Point, b: Point) -> bool
   |                   ^^^^^

error: aborting due to 8 previous errors

For more information about this error, try `rustc --explain E0609`.
